corrected spacing for graph.

--- a/src/css/scrolly.css
+++ b/src/css/scrolly.css
@@ -8,7 +8,7 @@ article {
 .sticky-container {
   position: sticky;
   left: 0;
-  top: 12.5vh;
+  top: 5.5vh;
   width: 100%;
   height: 75vh;
 }
